<resources>
    <string name="app_name">GithubUser</string>
    <string name="github_users">GITHUB USERS</string>
    <string name="search">Search</string>
    <string name="close">close</string>
    <string name="default_username">-</string>
    <string name="profile">profile</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="back">back</string>
    <string name="splash">splash</string>
    <string name="clear">clear</string>
    <string name="search_no_data">User Not Found</string>
</resources>