<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_detail"
    style="@style/sizeAllMatchParent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        style="@style/sizeAllMatchParent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/sizeAllMatchParent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_username"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/sizeAllMatchParent"
                    android:paddingHorizontal="@dimen/normal_100">

                    <ImageButton
                        android:id="@+id/img_close"
                        style="@style/sizeAllWrapContent"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/close"
                        android:src="@drawable/ic_close"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_username"
                        style="@style/sizeAllWrapContent"
                        android:layout_marginStart="@dimen/normal_100"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/default_username"
                        android:textColor="@color/white"
                        android:textSize="@dimen/body_1"
                        app:layout_constraintBottom_toBottomOf="@id/img_close"
                        app:layout_constraintStart_toEndOf="@id/img_close"
                        app:layout_constraintTop_toTopOf="@id/img_close" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_bar_username">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_1"
                    style="@style/sizeParsialMatchParent"
                    android:layout_marginBottom="@dimen/normal_100"
                    app:layout_constraintBottom_toTopOf="@id/constraint_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar_user"
                        android:layout_width="@dimen/image_user_profile_detail"
                        android:layout_height="@dimen/image_user_profile_detail"
                        android:contentDescription="@string/profile"
                        android:src="@drawable/ic_user"
                        app:layout_constraintBottom_toTopOf="@id/tv_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name"
                        style="@style/sizeAllWrapContent"
                        android:layout_marginTop="@dimen/normal_100"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/black"
                        android:textSize="@dimen/body_1"
                        app:layout_constraintBottom_toTopOf="@id/tv_company"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/avatar_user"
                        tools:text="Nur Muhammad Syaifuddin" />

                    <TextView
                        android:id="@+id/tv_company"
                        style="@style/sizeAllWrapContent"
                        android:layout_marginTop="@dimen/small_100"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="@dimen/body_1"
                        app:layout_constraintBottom_toTopOf="@id/tv_location"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_name"
                        tools:text="Google" />

                    <TextView
                        android:id="@+id/tv_location"
                        style="@style/sizeAllWrapContent"
                        android:layout_marginTop="@dimen/small_100"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="@dimen/body_1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_company"
                        tools:text="Indonesia" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_2"
                    style="@style/sizeParsialMatchParent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/constraint_1">

                    <TextView
                        android:id="@+id/tv_repository"
                        android:layout_width="@dimen/large_250"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_150"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h5"
                        app:layout_constraintBottom_toTopOf="@id/text_view_repository"
                        app:layout_constraintEnd_toStartOf="@id/tv_followers"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="10000" />

                    <TextView
                        android:id="@+id/text_view_repository"
                        style="@style/sizeAllWrapContent"
                        android:layout_marginTop="@dimen/small_50"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/repository"
                        android:textSize="@dimen/body_1"
                        app:layout_constraintEnd_toEndOf="@id/tv_repository"
                        app:layout_constraintStart_toStartOf="@id/tv_repository"
                        app:layout_constraintTop_toBottomOf="@id/tv_repository" />

                    <TextView
                        android:id="@+id/tv_followers"
                        android:layout_width="@dimen/large_250"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/normal_100"
                        android:layout_marginTop="@dimen/normal_150"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h5"
                        app:layout_constraintBottom_toTopOf="@id/text_view_followers"
                        app:layout_constraintEnd_toStartOf="@id/tv_following"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toEndOf="@id/tv_repository"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="100" />

                    <TextView
                        android:id="@+id/text_view_followers"
                        style="@style/sizeAllWrapContent"
                        android:layout_marginTop="@dimen/small_50"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/followers"
                        android:textSize="@dimen/body_1"
                        app:layout_constraintEnd_toEndOf="@id/tv_followers"
                        app:layout_constraintStart_toStartOf="@id/tv_followers"
                        app:layout_constraintTop_toBottomOf="@id/tv_followers" />

                    <TextView
                        android:id="@+id/tv_following"
                        android:layout_width="@dimen/large_250"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/normal_100"
                        android:layout_marginTop="@dimen/normal_150"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h5"
                        app:layout_constraintBottom_toTopOf="@id/text_view_following"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toEndOf="@id/tv_followers"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="100" />

                    <TextView
                        android:id="@+id/text_view_following"
                        style="@style/sizeAllWrapContent"
                        android:layout_marginTop="@dimen/small_50"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/following"
                        android:textSize="@dimen/body_1"
                        app:layout_constraintEnd_toEndOf="@id/tv_following"
                        app:layout_constraintStart_toStartOf="@id/tv_following"
                        app:layout_constraintTop_toBottomOf="@id/tv_following" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>